--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -12,15 +12,10 @@
 <div class="rooms">
 <% current_user.rooms.each do |room| %>
  <div class="room">
- <div class="chat-room">
- <a href="#"><%= room.name%></a>
+ <div class="room-name">
+ <%= link_to room.name, room_messages_path(room) %>
  </div>
  </div>
  <% end %>
  </div>
- <div class="room">
-  <div class="chat-room">
-  <a href="#">techroom2</a>
-  </div>
- </div>
-</div>
+ 
